# AutoRust

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust_cd.yml  rust_ci.yml
demo/: gradient_descent.rs  scalar_back_propagation.rs
src/: engine.rs  layer.rs  lib.rs  main.rs  mlp.rs  neuron.rs  test.rs
