[package]
name = "autorust"
description = "Rust implementation of Andrej Karpathy's micrograd scalar-valued engine with basic neural network."
authors = ["Carlo Bortolan <carlo.bortolan@gmail.com>"]
version = "0.0.3"
edition = "2021"
license = "MIT"
repository = "https://github.com/carlobortolan/autorust"
exclude = [".github"]

[dependencies]
rand = "0.8.5"
petgraph = "0.6.3"
